[package]
name = "delog"
version = "0.1.0-alpha.2"
description = "Deferred logging, an implementation and extension of Rust's standard logging facade."
authors = ["Nicolas Stalder <n@stalder.io>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nickray/delog"
documentation = "https://docs.rs/delog"
readme = "README.md"
categories = ["algorithms", "development-tools", "embedded", "no-std"]
keywords = ["log", "logging", "formatting"]
edition = "2018"

[package.metadata.docs.rs]
features = ["example"]
targets = []

[dependencies]
log = "0.4.11"

[dev-dependencies]
insta = "1.3.0"

[features]
example = ["std"]
# sole reason for this is to enable `print!` in the example's `Std{err,out}Flusher`
std = []
