[package]
name = "delog"
version = "0.1.0"
description = "Deferred logging, an implementation and extension of Rust's standard logging facade."
authors = ["Nicolas Stalder <n@stalder.io>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nickray/delog"
documentation = "https://docs.rs/delog"
readme = "README.md"
categories = ["algorithms", "development-tools", "embedded", "no-std"]
keywords = ["log", "logging", "formatting"]
edition = "2018"

[package.metadata.docs.rs]
features = ["example"]
targets = []

[dependencies]
log = "0.4.11"

[dev-dependencies]
insta = "1.3.0"

[features]
example = ["std"]
# sole reason for this is to enable `print!` in the example's `Std{err,out}Flusher`
std = []

max_level_off   = ["log/max_level_off"]
max_level_error = ["log/max_level_error"]
max_level_warn  = ["log/max_level_warn"]
max_level_info  = ["log/max_level_info"]
max_level_debug = ["log/max_level_debug"]
max_level_trace = ["log/max_level_trace"]

release_max_level_off   = ["log/release_max_level_off"]
release_max_level_error = ["log/release_max_level_error"]
release_max_level_warn  = ["log/release_max_level_warn"]
release_max_level_info  = ["log/release_max_level_info"]
release_max_level_debug = ["log/release_max_level_debug"]
release_max_level_trace = ["log/release_max_level_trace"]

knock-it-off = ["max_level_off", "release_max_level_off"]
