[package]
name = "examples"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.delog]
path = ".."
features = ["example"]

[features]
default = ["log-all"]
log-none = []
log-all = []

log-warn = []
