[package]
name = "gate-tests"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"

[dependencies.lib-a]
path = "lib-a"

[dependencies.lib-a1]
path = "lib-a/lib-a1"

[dependencies.lib-b]
path = "lib-b"

[dependencies.delog]
path = ".."
features = ["example"]

[features]
default = ["verbose-renderer"]
verbose-renderer = []
