[package]
name = "lib-a"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

[dependencies]
log = "0.4"

[dependencies.lib-a1]
path = "lib-a1"

[dependencies.delog]
path = "../.."

[features]
log-error = []
log-warn = ["log-error"]
log-info = ["log-warn"]
log-debug = ["log-info"]
log-trace = ["log-debug"]
log-all = ["log-trace"]
log-none = []
